infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-enigma
  namespace: devops-enigma
spec:
  type: ClusterIP
  selector:
    app: devops-enigma
  ports:
    - port: 80
      targetPort: 3000
